<resources>
    <string name="app_name">EatThis</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="ffnm">Find Food Near Me</string>
    <string name="Go">GO</string>
    <string name="advSearch">Advance Search</string>
    <string name="inputLocation">Input Location</string>

    <string name="Advanced_Search_title">Advance Search</string>
    <string name="Restaurant">Restaurant Crusine</string>
    <string name="Radius">Walking Distance</string>
    <string name="Done">Done</string>>

    <string name="search">Search</string>
    <string name="favourites">Favourites</string>
    <string name="about">About</string>
    <string name="title_activity_maps">Map</string>

    <string name="change_restaurant">Change Restaurant</string>

    <string-array name="RestaurantPick">
        <item>None</item>
        <item>Chinese</item>
        <item>Halal</item>
        <item>Japanese</item>
        <item>Thailand</item>
        <item>Western</item>
    </string-array>
    <string-array name="RadiusPick">
        <item>None</item>
        <item>100</item>
        <item>200</item>
        <item>300</item>
        <item>400</item>
        <item>500</item>
    </string-array>
<!--    <string-array name="titles">
        <item>Amir’s Prata House</item>
        <item>Aqua Seafood Restaurant</item>
        <item>Boutique Cafe</item>
        <item>Crusine And Heritage Restaurant</item>
        <item>Danny’s Wings</item>
        <item>Duck Rice Restaurant</item>
    </string-array>
    <string-array name="address">
        <item>Block 79 Marsling Street 9 #01-112 679592</item>
        <item>Block 8 Bukit Batok Drive #01-42B 680972</item>
        <item>Lor 21 Geylang Road  #1-21 790216</item>
        <item>20 Milena Walk  #03-12 618721</item>
        <item>25 Jalan Seutan Road #01-31 853628</item>
        <item>Chinatown Street 9 #-02-144 740819</item>
    </string-array>-->

    <string name="about_title">Eat This!</string>
    <string name="about_version">Version: 1.0</string>
    <string name="about_description">Eat This! is a school project mobile application that picks a restaurant for you based on your location.</string>
    <string name="about_teamname">Team: MDS </string>
    <string name="about_developers">Developers</string>
    <string name="about_names">- Ang Wei Xiang Darren</string>
    <string name="about_names2">- Chua Ming Kiang</string>
    <string name="about_names3">- Stanley Cheong Guo Hao</string>
    <string name="about_hdescription">Description</string>
    <string name="about_descriptions">Having troubles deciding what to eat? Let this app help you! Switch on your GPS or key in your location and we will choose a suitable place for you to eat nearby. Never will you have to wreck your brains about meals ever again!</string>
    <string name="nolocation">Unable to use GPS without Permissions</string>
</resources>
