<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/eticon"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/abouteticon" />

    <TextView
        android:text="@string/about_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/version"
        android:layout_alignStart="@+id/title"
        android:layout_alignBottom="@+id/abouteticon" />

    <TextView
        android:text="@string/about_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/abouteticon"
        android:layout_toStartOf="@+id/version"
        android:id="@+id/textView5"
        android:layout_alignParentEnd="true" />


    <TextView
        android:text="@string/about_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:id="@+id/title"
        android:layout_marginStart="12dp"
        android:layout_above="@+id/version"
        android:layout_toEndOf="@+id/abouteticon" />

    <TextView
        android:text="@string/about_teamname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/team"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true"
        android:layout_marginTop="11dp" />

    <TextView
        android:text="@string/about_developers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:id="@+id/textView6"
        android:layout_below="@+id/team"
        android:layout_alignParentStart="true"
        android:layout_marginTop="26dp" />

    <TextView
        android:text="@string/about_names"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/name1"
        android:layout_below="@+id/textView6"
        android:layout_alignParentStart="true"
        android:layout_marginTop="14dp" />

    <TextView
        android:text="@string/about_names2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/name2"
        android:layout_below="@+id/name1"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/about_names3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/name3"
        android:layout_below="@+id/name2"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/about_hdescription"
        android:textSize="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/hdescription"
        android:layout_below="@+id/name3"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp" />

    <TextView
        android:text="@string/about_descriptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/description"
        android:layout_below="@+id/hdescription"
        android:layout_alignParentStart="true"
        android:layout_marginTop="14dp" />


</RelativeLayout>